Fixed zoom cropping

--- a/src/HUD/Radar/radar.scss
+++ b/src/HUD/Radar/radar.scss
@@ -11,6 +11,20 @@
 #radar_maps_container.hide {
 	opacity: 0;
 }
+#radar_maps_container.preview {
+    transform: rotate3d(1, 0, 0, 14deg) translateX(-50%);
+    transform-style: preserve-3d;
+    left: 50%;
+    top: 100px;
+	.map {
+		perspective: 500px;
+	}
+}
+.radar-component-container {
+	width: 350px;
+	height:350px;
+	overflow: hidden;
+}
 #maps_container {
 	width: 100%;
 	height: 30px;
